--- a/eachfloor.css
+++ b/eachfloor.css
@@ -3,33 +3,14 @@
 @charset 'UTF-8';
 
 .floor {
-  border: 2px solid rebeccapurple;
-  overflow: auto;
+  /* border: 2px solid rebeccapurple; */
+  position: absolute;
   text-align: center;
+  left: 30px;
 }
 
-/* .title {
-  position: relative;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 40px;
-  padding-right: 40px;
-  border: 2px solid black;
-  border-radius: 80px;
+.title {
   width: 100px;
-  height: 60px;
-
-  text-align: center;
-} */
-
-p {
-  position: absolute;
-  margin: 50px;
-  width: 100px;
-  height: 70px;
-  /* 要素内の余白 */
-  padding-top: 10px;
-  padding-bottom: 10px;
   padding-left: 40px;
   padding-right: 40px;
   border: 2px solid black;
@@ -42,14 +23,17 @@ p {
 }
 
 img {
-  max-width: calc(90vw - 40px);
-  margin-top: 100px;
+  /* max-width: calc(90vw - 40px); */
+  /* max-height: calc(90vh - 40px); */
+  margin-top: 10vh;
+  margin-left: 35%;
+  margin-right: 35%;
 }
 
 .back {
   position: absolute;
-  right: 50px;
-  bottom: 50px;
+  left: 30px;
+  bottom: 100px;
   /* 要素内の余白 */
   padding-top: 20px;
   padding-bottom: 20px;
@@ -65,5 +49,5 @@ img {
 }
 
 .back:hover {
-  opacity: .6;
+  background-color: #f5f5f5;
 }
