--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 h1 {
   /* border: 1px solid red; */
-  margin: 10vh;
+  margin: 50px;
   font-size: 50px;
   text-align: center;
   color: black;
@@ -56,6 +56,9 @@ h1 {
   background-color: #f5f5f5;
 }
 
+.keyvisual {
+  text-align: center;
+}
 
 /* floor.html*/
 .floor-change {
@@ -112,14 +115,17 @@ h1 {
 
 
 /* responsible */
-@media screen and (max-width: 445px) {
+@media screen and (max-width: 530px) {
+  * {
+    size: 40%;
+  }
   .wrapper {
     position: absolute;
     overflow: hidden;
   }
 
   h1 {
-    width: 300px;
+    /* width: 300px; */
     position: relative;
   }
 }
