--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 }
 
 h1 {
-  /* border: 1px solid red; */
   margin: 50px;
   font-size: 50px;
   text-align: center;
@@ -60,9 +59,35 @@ h1 {
   text-align: center;
 }
 
+#slideshow {
+  animation: imgfade 4s infinite;
+  opacity: 0;
+}
+
+@keyframes imgfade {
+  0% {
+    opacity: 0;
+  }
+
+  25% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
 /* floor.html*/
 .floor-change {
-  /* border: 1px solid rebeccapurple; */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -74,7 +99,6 @@ h1 {
 .floorbox {
   position: relative;
   margin: 50px;
-  /* 間隔 */
   width: 200px;
   height: 100px;
 
@@ -94,7 +118,6 @@ h1 {
 .return-top {
   position: relative;
   margin: 50px;
-  /* 間隔 */
   width: 200px;
   height: 100px;
   border: 2px solid black;
@@ -108,7 +131,6 @@ h1 {
 
 .floorbox:hover,
 .return-top:hover {
-  /* opacity: 0.6; */
   background-color: #f5f5f5;
 }
 
@@ -117,6 +139,10 @@ h1 {
 /* responsible */
 @media screen and (max-width: 530px) {
   * {
+    /*
+    TODO
+    モバイル版対応させたい
+     */
     size: 40%;
   }
   .wrapper {
@@ -145,8 +171,6 @@ h1 {
 .return-top-embed-button {
   position: relative;
   overflow: auto;
-  /* width: 200px;
-  height: 80px; */
   padding: 20px;
   border: 2px solid black;
   border-radius: 80px;
@@ -178,7 +202,6 @@ h1 {
 }
 
 .access {
-  /* border: 1px solid #747578; */
   margin: 0 auto;
   /* 真ん中にそろえたいとき */
   padding: 30px;
